@@ -1,5 +1,8 @@
 Version 16.6:
 
+(2016-06-05)
+ * Add option "remember settings for streams" in Preferneces -> General.
+
 (2016-05-27)
  * Use the mplayer/mpv default video and audio output.
 
